--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,6 @@
   "name": "@coroot/coroot",
   "version": "0.1.0",
   "scripts": {
-    "build": "vue-cli-service build --dest=dist",
     "build-dev": "vue-cli-service build --dest=../static --watch",
     "build-prod": "vue-cli-service build --dest=../static src/main.js",
     "lint": "vue-cli-service lint",
@@ -26,21 +25,18 @@
     "markdown-it": "^14.1.0",
     "pluralize": "^8.0.0",
     "sql-formatter": "^12.2.0",
-    "stylus": "^0.64.0",
-    "stylus-loader": "^8.1.2",
     "uplot": "^1.6.24",
     "uuid": "^9.0.0",
-    "vue": "^3.5.22",
+    "vue": "^2.6.14",
     "vue-router": "^3.6.2",
-    "vuetify": "^2.6.13",
-    "vuetify-loader": "^1.9.2"
+    "vuetify": "^2.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@types/markdown-it": "^14.1.2",
-    "@vue/cli-plugin-babel": "^5.0.9",
-    "@vue/cli-plugin-eslint": "^5.0.9",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^8.56.0",
@@ -48,8 +44,9 @@
     "prettier": "^3.2.4",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.4",
     "vue-template-compiler": "^2.6.14",
-    "webpack-plugin-vuetify": "^3.1.2"
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
