修改 docker-compose 增加 java 模拟器

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -31,6 +31,15 @@ services:
     depends_on:
       - clickhouse
       - prometheus
+      
+  springboot-exception-simulator:
+    build:
+      context: ../springboot-exception-simulator
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    environment:
+      - JAVA_OPTS=-XX:+PreserveFramePointer -Xms256m -Xmx512m
 
   node-agent:
     restart: always
