--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -23,9 +23,9 @@ services:
       - 8080:8080
     command:
       - '--data-dir=/data'
-      - '--bootstrap-prometheus-url=http://127.0.0.1:9090'
+      - '--bootstrap-prometheus-url=http://prometheus:9090'
       - '--bootstrap-refresh-interval=15s'
-      - '--bootstrap-clickhouse-address=127.0.0.1:9000'
+      - '--bootstrap-clickhouse-address=clickhouse:9000'
     environment:
       - LICENSE_KEY=${LICENSE_KEY:-}
     depends_on:
@@ -55,7 +55,7 @@ services:
       - /sys/fs/cgroup:/host/sys/fs/cgroup
       - node_agent_data:/data
     command:
-      - '--collector-endpoint=http://127.0.0.1:8080'
+      - '--collector-endpoint=http://coroot:8080'
       - '--cgroupfs-root=/host/sys/fs/cgroup'
       - '--wal-dir=/data'
 
@@ -66,7 +66,7 @@ services:
     volumes:
       - cluster_agent_data:/data
     command:
-      - '--coroot-url=http://127.0.0.1:8080'
+      - '--coroot-url=http://coroot:8080'
       - '--metrics-scrape-interval=15s'
       - '--metrics-wal-dir=/data'
     depends_on:
@@ -85,7 +85,7 @@ services:
       - '--web.enable-lifecycle'
       - '--web.enable-remote-write-receiver'
     ports:
-      - 9090:9090
+      - '127.0.0.1:9090:9090'
 
   clickhouse:
     restart: always
@@ -96,7 +96,7 @@ services:
       - clickhouse_data:/var/lib/clickhouse
       - clickhouse_logs:/var/log/clickhouse-server
     ports:
-      - 9000:9000
+      - '127.0.0.1:9000:9000'
     ulimits:
       nofile:
         soft: 262144
