docker-compose 配置改成 journald 日志驱动，这样 Spring Boot 日志就能直接用 journalctl 查看，非常方便排查异常

--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -43,6 +43,8 @@ services:
       - JAVA_OPTS=-XX:+PreserveFramePointer -Xms256m -Xmx512m
     depends_on:
       - coroot 
+    logging:
+      driver: journald
 
   # node-agent:
   #   restart: always
