--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -44,7 +44,10 @@ services:
     depends_on:
       - coroot 
     logging:
-      driver: journald
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"  
 
   # node-agent:
   #   restart: always
